--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="#home" class="w3-bar-item w3-button">Home</a>
             <a href="#about" class="w3-bar-item w3-button">About Me</a>
             <a href="#hobbies" class="w3-bar-item w3-button">hobbies</a>
+            <a href="#Skills" class="w3-bar-item w3-button">Skills</a>
         </div>
     </nav>
 
